--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "fvgs.ai",
   "version": "1.0.0",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "start": "http-server -a 127.0.0.1 -p 7890",
+    "dist": "node-sass src/ -o dist/",
+    "watch": "npm run dist && node-sass -w src/ -o dist/"
+  },
   "devDependencies": {
+    "http-server": "0.9.0",
     "node-sass": "3.10.1"
   }
 }
