--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "build": "node --harmony scripts/build.js",
     "watch": "node --harmony scripts/watch.js"
   },
-  "dependencies": {
-    "animate.css": "3.5.2",
-    "normalize.css": "5.0.0"
-  },
   "devDependencies": {
+    "animate.css": "3.5.2",
     "autoprefixer": "6.6.1",
     "gaze": "1.1.2",
     "http-server": "0.9.0",
     "node-sass": "3.13.0",
+    "normalize.css": "5.0.0",
     "postcss": "5.2.10"
   }
 }
